Buttons: Fix `.btn-icon` sizing in button and input groups

--- a/test/visual/button.html
+++ b/test/visual/button.html
@@ -7,6 +7,7 @@
 <title>Figuration - Button</title>
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
+<link rel="stylesheet" href="../../docs/assets/fonts/fontawesome/css/fontawesome-all.min.css">
 
 <script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
 <script  src="../../dist/js/figuration.js"></script>
@@ -136,6 +137,24 @@ Anchor variants:<br />
     <button type="button" class="btn btn-outline-info">Standard button <span class="caret" aria-hidden="true"></span></button>
     <button type="button" class="btn btn-outline-info btn-large">Large button <span class="caret" aria-hidden="true"></span></button>
     <button type="button" class="btn btn-outline-info btn-xlarge">Extra Large button <span class="caret" aria-hidden="true"></span></button>
+</p>
+
+<h2>Icon Buttons</h2>
+
+<p>
+  <button type="button" class="btn btn-icon btn-xlarge" aria-label="Extra large icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
+</p>
+<p>
+  <button type="button" class="btn btn-icon btn-large" aria-label="Large icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
+</p>
+<p>
+  <button type="button" class="btn btn-icon" aria-label="Default size icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
+</p>
+<p>
+  <button type="button" class="btn btn-icon btn-small" aria-label="Small icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
+</p>
+<p>
+  <button type="button" class="btn btn-icon btn-xsmall" aria-label="Extra small icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
 </p>
 
 <h2>Block</h2>
