--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -7,6 +7,7 @@
 <title>Figuration - Input Group</title>
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
+<link rel="stylesheet" href="../../docs/assets/fonts/fontawesome/css/fontawesome-all.min.css">
 
 <script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
 <script src="../../dist/js/figuration.js"></script>
@@ -335,6 +336,39 @@
     <div class="input-group-text" id="sizing-addon5">@</div>
   </div>
   <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="sizing-addon5">
+</div>
+
+<h2>Input group size w/ icon buttons</h2>
+
+<div class="input-group input-group-xlarge">
+  <div class="input-group-addon">
+    <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
+  </div>
+  <input type="text" class="form-control" placeholder="Username" aria-label="Username">
+</div>
+<div class="input-group input-group-large">
+  <div class="input-group-addon">
+    <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
+  </div>
+  <input type="text" class="form-control" placeholder="Username" aria-label="Username">
+</div>
+<div class="input-group">
+  <div class="input-group-addon">
+    <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
+  </div>
+  <input type="text" class="form-control" placeholder="Username" aria-label="Username">
+</div>
+<div class="input-group input-group-small">
+  <div class="input-group-addon">
+    <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
+  </div>
+  <input type="text" class="form-control" placeholder="Username" aria-label="Username">
+</div>
+<div class="input-group input-group-xsmall">
+  <div class="input-group-addon">
+    <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
+  </div>
+  <input type="text" class="form-control" placeholder="Username" aria-label="Username">
 </div>
 
 <h2>Input group size w/ select</h2>
