--- a/test/visual/button-group.html
+++ b/test/visual/button-group.html
@@ -7,6 +7,7 @@
 <title>Figuration - Button Group</title>
 
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
+<link rel="stylesheet" href="../../docs/assets/fonts/fontawesome/css/fontawesome-all.min.css">
 
 <script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
 <script src="../../dist/js/figuration.js"></script>
@@ -188,6 +189,33 @@
         <button type="button" class="btn">Middle</button>
         <button type="button" class="btn">Right</button>
     </div>
+
+    <h2>Sizing w/ button icons</h2>
+    <div class="btn-group btn-group-xlarge mb-0_5" role="group" aria-label="Extra large button group">
+        <button type="button" class="btn">Action</button>
+        <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
+    </div>
+    <br />
+    <div class="btn-group btn-group-large mb-0_5" role="group" aria-label="Large button group">
+        <button type="button" class="btn">Action</button>
+        <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
+    </div>
+    <br />
+    <div class="btn-group mb-0_5" role="group" aria-label="Standard button group">
+        <button type="button" class="btn">Action</button>
+        <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
+    </div>
+    <br />
+    <div class="btn-group btn-group-small mb-0_5" role="group" aria-label="Small button group">
+        <button type="button" class="btn">Action</button>
+        <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
+    </div>
+    <br />
+    <div class="btn-group btn-group-xsmall mb-0_5" role="group" aria-label="Extra small button group">
+        <button type="button" class="btn">Action</button>
+        <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
+    </div>
+
 
 </div>
 
