some visual test

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -207,6 +207,29 @@ $(window).ready(function() {
 
             <h2 id="slider">Slider:</h2>
 
+            <strong>Range Slider</strong>
+            <div class="slider-sample">
+                <form class="form-inline">
+                    <div id="sliderRange0" class="d-flex flex-items-center" data-cfw="slider" data-cfw-slider-min=0 data-cfw-slider-max=100 data-cfw-slider-step=1>
+                        <div class="form-group">
+                            <label id="sliderRange0_0_Label" for="sliderRange0_0" class="me-0_25">Value</label>
+                            <input id="sliderRange0_0" type="range">
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <strong>Custom Range Slider</strong>
+            <div class="slider-sample">
+                <form class="form-inline">
+                    <div id="sliderRange0" class="d-flex flex-items-center" data-cfw="slider" data-cfw-slider-min=0 data-cfw-slider-max=100 data-cfw-slider-step=1>
+                        <div class="form-group">
+                            <label id="sliderRange0_0_Label" for="sliderRange0_0" class="me-0_25">Value</label>
+                            <input id="sliderRange0_0" type="range" class="custom-range">
+                        </div>
+                    </div>
+                </form>
+            </div>
+
             <strong>Single Slider:</strong>
             <div class="slider-sample">
                 <form class="form-inline">
