Form and input group tweaks

--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -862,6 +862,190 @@
     </div>
 </div>
 
+<h2>Addon Placement</h2>
+
+<div class="input-group">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <input type="text" class="form-control">
+</div>
+
+<div class="input-group">
+    <input type="text" class="form-control">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+</div>
+
+<div class="input-group">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <input type="text" class="form-control">
+</div>
+
+<div class="input-group">
+    <input type="text" class="form-control">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+</div>
+
+<div class="input-group">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <input type="text" class="form-control">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+</div>
+
+<div class="input-group">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <input type="text" class="form-control">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+</div>
+
+<div class="input-group">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <input type="text" class="form-control">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+</div>
+
+<div class="input-group">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <input type="text" class="form-control">
+    <input type="text" class="form-control">
+</div>
+
+<div class="input-group">
+    <input type="text" class="form-control">
+    <input type="text" class="form-control">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+</div>
+
+<div class="input-group">
+    <input type="text" class="form-control">
+    <input type="text" class="form-control">
+    <input type="text" class="form-control">
+</div>
+
+<div class="input-group">
+    <input type="text" class="form-control">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <input type="text" class="form-control">
+</div>
+
+<div class="input-group">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <input type="text" class="form-control">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <input type="text" class="form-control">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+</div>
+
+<div class="input-group">
+    <input type="text" class="form-control">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <input type="text" class="form-control">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <input type="text" class="form-control">
+</div>
+
+<h2>Validation</h2>
+<p>
+    Input group validation does not support multiple inputs, multiple selects,
+    or validation feedback on custom file inputs due to CSS selector limitation.
+</p>
+
+<div class="input-group">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <input type="text" class="form-control is-invalid input-group-end" required="">
+    <div class="invalid-feedback">Example invalid feedback.</div>
+</div>
+
+<div class="input-group">
+    <input type="text" class="form-control is-invalid" required="">
+    <div class="input-group-addon"><div class="input-group-text input-group-end">Addon</div></div>
+    <div class="invalid-feedback">Example invalid feedback.</div>
+</div>
+
+<div class="input-group">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <input type="text" class="form-control is-invalid" required="">
+    <div class="input-group-addon"><div class="input-group-text input-group-end">Addon</div></div>
+    <div class="invalid-feedback">Example invalid feedback.</div>
+</div>
+
+<div class="input-group">
+    <div class="input-group-addon"><button type="button" class="btn">Button</button></div>
+    <input type="text" class="form-control is-invalid input-group-end" required="">
+    <div class="invalid-feedback">Example invalid feedback.</div>
+</div>
+
+<div class="input-group">
+    <input type="text" class="form-control is-invalid" required="">
+    <div class="input-group-addon"><button type="button" class="btn input-group-end">Button</button></div>
+    <div class="invalid-feedback">Example invalid feedback.</div>
+</div>
+
+<div class="input-group">
+    <div class="input-group-addon"><button type="button" class="btn">Button</button></div>
+    <input type="text" class="form-control is-invalid" required="">
+    <div class="input-group-addon"><button type="button" class="btn input-group-end">Button</button></div>
+    <div class="invalid-feedback">Example invalid feedback.</div>
+</div>
+
+<div class="input-group">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <select class="custom-select is-invalid input-group-end">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+    </select>
+    <div class="invalid-feedback">Example invalid feedback.</div>
+</div>
+
+<div class="input-group">
+    <select class="custom-select is-invalid">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+    </select>
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <div class="invalid-feedback">Example invalid feedback.</div>
+</div>
+
+<div class="input-group">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <select class="custom-select is-invalid">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+    </select>
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <div class="invalid-feedback">Example invalid feedback.</div>
+</div>
+
+<div class="input-group">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <div class="custom-file">
+        <input type="file" class="custom-file-input is-invalid" id="validateFile1">
+        <label class="custom-file-label" for="validateFile1">Choose file...</label>
+    </div>
+</div>
+
+<div class="input-group">
+    <div class="custom-file">
+        <input type="file" class="custom-file-input is-invalid" id="validateFile2">
+        <label class="custom-file-label" for="validateFile2">Choose file...</label>
+    </div>
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+</div>
+
+<div class="input-group">
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+    <div class="custom-file">
+        <input type="file" class="custom-file-input is-invalid" id="validateFile4">
+        <label class="custom-file-label" for="validateFile3">Choose file...</label>
+    </div>
+    <div class="input-group-addon"><div class="input-group-text">Addon</div></div>
+</div>
+
 </div></div></div>
 
 </body>
