--- a/test/visual/form-validation.html
+++ b/test/visual/form-validation.html
@@ -106,6 +106,13 @@
         </div>
     </div>
     <div class="form-group">
+        <div class="custom-file">
+            <input type="file" class="custom-file-input" id="validateFile1" required>
+            <label class="custom-file-label" for="validateFile1">Choose file...</label>
+            <div class="invalid-feedback">Example invalid feedback.</div>
+        </div>
+    </div>
+    <div class="form-group">
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
             <label class="form-check-label" for="invalidCheck">Agree to terms and conditions</label>
@@ -177,6 +184,13 @@
             <label for="validationServer05">Zip</label>
             <input type="text" class="form-control is-invalid" id="validationServer05" placeholder="Zip" required>
             <div class="invalid-feedback">Please provide a valid zip.</div>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="custom-file">
+            <input type="file" class="custom-file-input is-invalid" id="validateFile2">
+            <label class="custom-file-label" for="validateFile2">Choose file...</label>
+            <div class="invalid-feedback">Example invalid feedback.</div>
         </div>
     </div>
     <div class="form-group">
