Fix html lint errors in visual tests

--- a/test/visual/badge.html
+++ b/test/visual/badge.html
@@ -9,27 +9,7 @@
 <link type="text/css" rel="stylesheet" href="../../dist/css/figuration.css" />
 
 <script src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
-<!--<script src="../../dist/js/figuration.js"></script>-->
-
-<script type="text/javascript" src="../../docs/assets/js/vendor/jquery.slim.min.js"></script>
-<script type="text/javascript" src="../../js/util.js"></script>
-<script type="text/javascript" src="../../js/drag.js"></script>
-<script type="text/javascript" src="../../js/collapse.js"></script>
-<script type="text/javascript" src="../../js/dropdown.js"></script>
-<script type="text/javascript" src="../../js/tab.js"></script>
-<script type="text/javascript" src="../../js/affix.js"></script>
-<script type="text/javascript" src="../../js/tooltip.js"></script>
-<script type="text/javascript" src="../../js/popover.js"></script>
-<script type="text/javascript" src="../../js/modal.js"></script>
-<script type="text/javascript" src="../../js/tab-responsive.js"></script>
-<script type="text/javascript" src="../../js/accordion.js"></script>
-<script type="text/javascript" src="../../js/slideshow.js"></script>
-<script type="text/javascript" src="../../js/scrollspy.js"></script>
-<script type="text/javascript" src="../../js/alert.js"></script>
-<script type="text/javascript" src="../../js/lazy.js"></script>
-<script type="text/javascript" src="../../js/slider.js"></script>
-<script type="text/javascript" src="../../js/equalize.js"></script>
-<script type="text/javascript" src="../../js/common.js"></script>
+<script src="../../dist/js/figuration.js"></script>
 
 </head>
 <body>
@@ -122,9 +102,9 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </span>
-    <a href="#" class="badge badge-secondary">
+    <a href="#" role="button" class="badge badge-secondary">
         Dismissable anchor badge
-        <span role="button" class="close" aria-label="Dismiss">
+        <span class="close" aria-label="Dismiss">
             <span aria-hidden="true">&times;</span>
         </span>
     </a>
@@ -136,9 +116,9 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </span>
-    <a href="#" class="badge badge-pill badge-success">
+    <a href="#" role="button" class="badge badge-pill badge-success">
         Dismissable anchor badge
-        <span role="button" class="close" aria-label="Dismiss">
+        <span class="close" aria-label="Dismiss">
             <span aria-hidden="true">&times;</span>
         </span>
     </a>
