--- a/test/visual/button.html
+++ b/test/visual/button.html
@@ -170,7 +170,7 @@ Anchor variants:<br />
 <h2 id="button">Button Check</h2>
 
 <strong>Toggle State:</strong>
-<p>
+<div class="mb-1">
     <div class="btn-check">
         <input id="checkbox0" type="checkbox" class="btn-check-input">
         <label for="checkbox0" class="btn btn-info">Single toggle</label>
@@ -180,7 +180,7 @@ Anchor variants:<br />
         <input id="checkbox1" type="checkbox" class="btn-check-input" checked>
         <label for="checkbox1" class="btn btn-info">Single toggle</label>
     </div>
-</p>
+</div>
 
 <div class="row mb-1">
     <div class="col-12">
@@ -258,12 +258,12 @@ Anchor variants:<br />
 </div>
 
 <strong>Toggle State (Disabled):</strong>
-<p>
+<div class="mb-1">
     <div class="btn-check">
         <input id="checkbox8" type="checkbox" class="btn-check-input" disabled>
         <label for="checkbox8" class="btn btn-info">Single toggle</label>
     </div>
-</p>
+</div>
 <div class="row mb-1">
     <div class="col-sm-6">
         <div class="btn-group">
