--- a/test/visual/form-validation.html
+++ b/test/visual/form-validation.html
@@ -349,9 +349,9 @@
     </div>
     <div class="input-group input-group-large mb-1">
         <div class="input-group-addon">
-            <span class="input-group-text" for="custom-select-1">Options</span>
+            <span class="input-group-text" id="custom-select-addon">Options</span>
         </div>
-        <select class="custom-select has-validation-icon input-group-end" required>
+        <select class="custom-select has-validation-icon input-group-end" aria-describedby="custom-select-addon" required>
             <option value="">Choose...</option>
             <option value="1">One</option>
             <option value="2">Two</option>
