add min-width to `.custom-range` when inline

--- a/test/dev/player.html
+++ b/test/dev/player.html
@@ -103,6 +103,7 @@ body {
 .player-seek .slider.slider-horizontal,
 .player-seek input[type="range"] {
     width: 100px;
+    min-width: 100px;
 }
 .player-mute {
     display: inline-block;
@@ -134,6 +135,7 @@ body {
 .player-volume .slider.slider-horizontal,
 .player-volume input[type="range"] {
     width: 80px;
+    min-width: 80px;
 }
 .player-fullscreen {
     display: inline-block;
