Correct the use of `.card-img-top/bottom`

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -2845,8 +2845,8 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Card</h3>
 <div class="card-sample">
     <div class="card">
-      <div class="card-img card-img-top">
-        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      <div class="card-img">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
       </div>
       <div class="card-body">
         <h4 class="card-title">Card title</h4>
@@ -2859,8 +2859,8 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Card - content types</h3>
 <div class="card-sample">
     <div class="card">
-      <div class="card-img card-img-top">
-        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      <div class="card-img">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
       </div>
       <div class="card-body">
         <h4 class="card-title">Card title</h4>
@@ -2886,8 +2886,8 @@ Showing a <kbd>kdb sample</kbd>
     </div>
 
     <div class="card">
-      <div class="card-img card-img-top">
-        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      <div class="card-img">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
       </div>
       <div class="card-body">
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -3028,8 +3028,8 @@ Showing a <kbd>kdb sample</kbd>
 
     <h3>Card - image caps</h3>
     <div class="card">
-      <div class="card-img card-img-top">
-        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      <div class="card-img">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
       </div>
       <div class="card-body">
         <h4 class="card-title">Card title</h4>
@@ -3043,8 +3043,8 @@ Showing a <kbd>kdb sample</kbd>
         <p class="card-text">Some sample text to build out the size of the card. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
-      <div class="card-img card-img-bottom">
-        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      <div class="card-img">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid card-img-bottom" alt="Placeholder image">
       </div>
     </div>
 
@@ -3061,8 +3061,8 @@ Showing a <kbd>kdb sample</kbd>
 
     <h3>Card - image overlay</h3>
     <div class="card">
-      <div class="card-img card-img-top card-img-bottom">
-        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+      <div class="card-img">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid card-img-top card-img-bottom" alt="Placeholder image">
       </div>
       <div class="card-img-overlay text-white">
         <h4 class="card-title">Card title</h4>
@@ -3228,8 +3228,8 @@ Showing a <kbd>kdb sample</kbd>
 <div class="card-sample">
     <div class="card-group">
       <div class="card">
-        <div class="card-img card-img-top">
-        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+        <div class="card-img">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
       </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
@@ -3238,8 +3238,8 @@ Showing a <kbd>kdb sample</kbd>
         </div>
       </div>
       <div class="card">
-        <div class="card-img card-img-top">
-          <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+        <div class="card-img">
+          <img src="../../docs/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
         </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
@@ -3248,8 +3248,8 @@ Showing a <kbd>kdb sample</kbd>
         </div>
       </div>
       <div class="card">
-        <div class="card-img card-img-top">
-          <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+        <div class="card-img">
+          <img src="../../docs/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
         </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
@@ -3263,8 +3263,8 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Card deck</h3>
 <div class="card-deck">
   <div class="card">
-    <div class="card-img card-img-top">
-      <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+    <div class="card-img">
+      <img src="../../docs/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
     </div>
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
@@ -3273,8 +3273,8 @@ Showing a <kbd>kdb sample</kbd>
     </div>
   </div>
   <div class="card">
-    <div class="card-img card-img-top">
-      <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+    <div class="card-img">
+      <img src="../../docs/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
     </div>
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
@@ -3283,8 +3283,8 @@ Showing a <kbd>kdb sample</kbd>
     </div>
   </div>
   <div class="card">
-    <div class="card-img card-img-top">
-      <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+    <div class="card-img">
+      <img src="../../docs/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
     </div>
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
@@ -3321,8 +3321,8 @@ Showing a <kbd>kdb sample</kbd>
 
 <div class="card-columns">
   <div class="card">
-    <div class="card-img card-img-top">
-        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+    <div class="card-img">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
       </div>
     <div class="card-body">
       <h4 class="card-title">Card title that wraps to a new line</h4>
@@ -3341,8 +3341,8 @@ Showing a <kbd>kdb sample</kbd>
     </div>
   </div>
   <div class="card">
-    <div class="card-img card-img-top">
-        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+    <div class="card-img">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
       </div>
     <div class="card-body">
       <h4 class="card-title">Card title</h4>
@@ -3363,8 +3363,8 @@ Showing a <kbd>kdb sample</kbd>
     </div>
   </div>
   <div class="card">
-    <div class="card-img card-img-top">
-        <img src="../../docs/assets/img/test.gif" class="img-fluid" alt="Placeholder image">
+    <div class="card-img">
+        <img src="../../docs/assets/img/test.gif" class="img-fluid card-img-top" alt="Placeholder image">
       </div>
   </div>
   <div class="card text-end">
