--- a/test/visual/card.html
+++ b/test/visual/card.html
@@ -75,8 +75,8 @@ Holder.addTheme("gray", {
 
     <div class="card-deck-sm">
         <div class="card">
-            <div class="card-img card-img-top">
-                <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+            <div class="card-img">
+                <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
             </div>
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
@@ -85,8 +85,8 @@ Holder.addTheme("gray", {
             </div>
         </div>
         <div class="card">
-            <div class="card-img card-img-top">
-                <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+            <div class="card-img">
+                <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
             </div>
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
@@ -103,8 +103,8 @@ Holder.addTheme("gray", {
             </div>
         </div>
         <div class="card">
-            <div class="card-img card-img-top">
-                <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+            <div class="card-img">
+                <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
             </div>
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
@@ -152,8 +152,8 @@ Holder.addTheme("gray", {
 
     <div class="card-group-sm">
       <div class="card">
-        <div class="card-img card-img-top">
-            <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-img">
+            <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
@@ -162,8 +162,8 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <div class="card-img card-img-top">
-            <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-img">
+            <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
@@ -180,8 +180,8 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <div class="card-img card-img-top">
-            <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-img">
+            <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
@@ -227,8 +227,8 @@ Holder.addTheme("gray", {
 
     <div class="card-group-sm">
       <div class="card">
-        <div class="card-img card-img-top">
-            <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-img">
+            <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
@@ -245,8 +245,8 @@ Holder.addTheme("gray", {
     <h3>Deck</h3>
     <div class="card-deck-md">
       <div class="card">
-        <div class="card-img card-img-top">
-          <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-img">
+          <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
@@ -257,8 +257,8 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <div class="card-img card-img-top">
-          <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-img">
+          <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
@@ -269,8 +269,8 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <div class="card-img card-img-top">
-          <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-img">
+          <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
@@ -286,8 +286,8 @@ Holder.addTheme("gray", {
 
     <div class="card-group-md">
       <div class="card">
-        <div class="card-img card-img-top">
-          <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-img">
+          <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
@@ -298,8 +298,8 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <div class="card-img card-img-top">
-          <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-img">
+          <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
@@ -310,8 +310,8 @@ Holder.addTheme("gray", {
         </div>
       </div>
       <div class="card">
-        <div class="card-img card-img-top">
-          <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+        <div class="card-img">
+          <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
         </div>
         <div class="card-body">
           <h4 class="card-title">Card title</h4>
@@ -329,8 +329,8 @@ Holder.addTheme("gray", {
 
     <div class="card-deck card-deck-col">
         <div class="card">
-            <div class="card-img card-img-top">
-                <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+            <div class="card-img">
+                <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
             </div>
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
@@ -338,8 +338,8 @@ Holder.addTheme("gray", {
             </div>
         </div>
         <div class="card">
-            <div class="card-img card-img-top">
-                <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+            <div class="card-img">
+                <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
             </div>
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
@@ -354,8 +354,8 @@ Holder.addTheme("gray", {
             </div>
         </div>
         <div class="card">
-            <div class="card-img card-img-top">
-                <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+            <div class="card-img">
+                <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
             </div>
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
@@ -363,8 +363,8 @@ Holder.addTheme("gray", {
             </div>
         </div>
         <div class="card">
-            <div class="card-img card-img-top">
-                <img class="img-fluid" data-src="holder.js/100px180/" alt="Card image cap">
+            <div class="card-img">
+                <img class="img-fluid card-img-top" data-src="holder.js/100px180/" alt="Card image cap">
             </div>
             <div class="card-body">
                 <h4 class="card-title">Card title</h4>
