more player test tweaks

--- a/test/dev/player.html
+++ b/test/dev/player.html
@@ -878,8 +878,7 @@ body {
             <span class="player-time me-0_25" data-cfw-player="time">
                 <span class="player-time-current" data-cfw-player="time-current"></span>
                 <span class="player-seek form-inline" data-cfw-player="seek">
-                	<label for="rangeSeek9">Seek slider</label>
-                	<input type="range" id="rangeSeek9" class="custom-range">
+                	<input type="range" class="custom-range" aria-label="Seek">
                 </span>
                 <span class="player-time-duration" data-cfw-player="time-duration"></span>
             </span>
@@ -889,8 +888,7 @@ body {
                 <button type="button" class="btn btn-icon player-mute-off" title="Mute" aria-label="Mute"><span class="fas fa-fw fa-volume-up"></span></button>
             </span>
             <span class="player-volume form-inline me-0_25" data-cfw-player="volume">
-                <label for="rangeVol9">Volume slider</label>
-                <input type="range" id="rangeVol9" class="custom-range">
+                <input type="range" class="custom-range" aria-label="Volume">
             </span>
             <button type="button" class="btn btn-icon me-0_25" data-cfw-player="loop" title="Repeat" aria-label="Repeat"><span class="fas fa-fw fa-redo"></span></button>
             <button type="button" class="btn btn-icon me-0_25" data-cfw-player="caption" title="Closed Captions" aria-label="Closed Captions"><span class="fas fa-fw fa-closed-captioning"></span></button>
