add button group

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -242,7 +242,7 @@ $(window).ready(function() {
                         </div>
                         <div class="btn-check">
                             <input id="checkbox6" type="checkbox" class="btn-check-input">
-                            <label for="checkbox6" class="btn btn-outline-info">Check 2</label>
+                            <label for="checkbox6" class="btn btn-outline-danger">Check 2</label>
                         </div>
                         <div class="btn-check">
                             <input id="checkbox7" type="checkbox" class="btn-check-input">
@@ -279,7 +279,7 @@ $(window).ready(function() {
                         </div>
                         <div class="btn-check">
                             <input id="radio1-1" type="radio" name="radio1" class="btn-check-input">
-                            <label for="radio1-1" class="btn btn-outline-info">Radio 2</label>
+                            <label for="radio1-1" class="btn btn-outline-danger">Radio 2</label>
                         </div>
                         <div class="btn-check">
                             <input id="radio1-2" type="radio" name="radio1" class="btn-check-input">
