--- a/test/js/index.html
+++ b/test/js/index.html
@@ -52,8 +52,8 @@
 </script>
 
 <!-- QUnit -->
-<link rel="stylesheet" href="../vendor/qunit.css" media="screen">
-<script src="../vendor/qunit.js"></script>
+<link rel="stylesheet" href="../../node_modules/qunit/qunit/qunit.css" media="screen">
+<script src="../../node_modules/qunit/qunit/qunit.js"></script>
 <script>
     // See https://github.com/axemclion/grunt-saucelabs#test-result-details-with-qunit
     var log = [];
