Reduce specifity in lists and add missing pagination acitve border

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -2875,7 +2875,7 @@ Showing a <kbd>kdb sample</kbd>
     </div>
 
     <div class="card">
-      <ul class="list list-spaced list-divided">
+      <ul class="list list-spaced list-divided card-list">
         <li class="list-item">Cras justo odio</li>
         <li class="list-item">Dapibus ac facilisis in</li>
         <li class="list-item">Vestibulum at eros</li>
