--- a/test/visual/list.html
+++ b/test/visual/list.html
@@ -92,8 +92,8 @@
     <li class="list-item">List item</li>
     <li class="list-item">List item
         <ul>
-            <li>List item</li>
-            <li>List item</li>
+            <li>Standard ul item</li>
+            <li>Standard ul item</li>
         </ul>
     </li>
     <li class="list-item">List item</li>
@@ -114,8 +114,8 @@
     <li class="list-item">List item</li>
     <li class="list-item">List item
         <ol>
-            <li>List item</li>
-            <li>List item</li>
+            <li>Standard ol item</li>
+            <li>Standard ol item</li>
         </ol>
     </li>
     <li class="list-item">List item</li>
@@ -145,124 +145,124 @@
 
 <h2>Bulleted</h2>
 <ul class="list list-bulleted">
-    <li class="list-item">List item</li>
-    <li class="list-item">List item
+    <li class="list-item">Bulleted item</li>
+    <li class="list-item">Bulleted item
         <ul>
-            <li>List item</li>
-            <li>List item</li>
+            <li>Standard ul item</li>
+            <li>Standard ul item</li>
         </ul>
     </li>
-    <li class="list-item">List item</li>
+    <li class="list-item">Bulleted item</li>
 </ul>
 
 <ul class="list list-bulleted">
-    <li class="list-item">List item</li>
-    <li class="list-item">List item
+    <li class="list-item">Bulleted item</li>
+    <li class="list-item">Bulleted item
         <ul class="list list-bulleted">
-            <li class="list-item">List item</li>
-            <li class="list-item">List item</li>
+            <li class="list-item">Bulleted item</li>
+            <li class="list-item">Bulleted item</li>
         </ul>
     </li>
-    <li class="list-item">List item</li>
+    <li class="list-item">Bulleted item</li>
 </ul>
 
 <div class="list list-bulleted">
-    <div class="list-item">List item</div>
-    <div class="list-item">List item
+    <div class="list-item">Bulleted item</div>
+    <div class="list-item">Bulleted item
         <div class="list list-bulleted">
-            <div class="list-item">List item</div>
-            <div class="list-item">List item</div>
+            <div class="list-item">Bulleted item</div>
+            <div class="list-item">Bulleted item</div>
         </div>
     </div>
-    <div class="list-item">List item</div>
+    <div class="list-item">Bulleted item</div>
 </div>
 
 <h2>Ordered</h2>
 <ol class="list list-ordered">
-    <li class="list-item">List item</li>
-    <li class="list-item">List item
+    <li class="list-item">Ordered item</li>
+    <li class="list-item">Ordered item
         <ol>
-            <li>List item</li>
-            <li>List item</li>
+            <li>Standard ol item</li>
+            <li>Standard ol item</li>
         </ol>
     </li>
-    <li class="list-item">List item</li>
+    <li class="list-item">Ordered item</li>
 </ol>
 
 <ol class="list list-ordered">
-    <li class="list-item">List item</li>
-    <li class="list-item">List item
+    <li class="list-item">Ordered item</li>
+    <li class="list-item">Ordered item
         <ol class="list list-ordered">
-            <li class="list-item">List item</li>
-            <li class="list-item">List item</li>
+            <li class="list-item">Ordered item</li>
+            <li class="list-item">Ordered item</li>
         </ol>
     </li>
-    <li class="list-item">List item</li>
+    <li class="list-item">Ordered item</li>
 </ol>
 
 <div class="list list-ordered">
-    <div class="list-item">List item</div>
-    <div class="list-item">List item
+    <div class="list-item">Ordered item</div>
+    <div class="list-item">Ordered item
         <div class="list list-ordered">
-            <div class="list-item">List item</div>
-            <div class="list-item">List item</div>
+            <div class="list-item">Ordered item</div>
+            <div class="list-item">Ordered item</div>
         </div>
     </div>
-    <div class="list-item">List item</div>
+    <div class="list-item">Ordered item</div>
 </div>
 
 <h2>Nested</h2>
 
 <ul class="list list-bulleted">
-    <li class="list-item">List item</li>
-    <li class="list-item">List item
+    <li class="list-item">Bulleted item</li>
+    <li class="list-item">Bulleted item
         <ul class="list list-ordered">
-            <li class="list-item">List item</li>
-            <li class="list-item">List item</li>
+            <li class="list-item">Ordered item</li>
+            <li class="list-item">Ordered item</li>
         </ul>
     </li>
-    <li class="list-item">List item</li>
+    <li class="list-item">Bulleted item</li>
 </ul>
 
 <ul class="list list-ordered">
-    <li class="list-item">List item</li>
-    <li class="list-item">List item
+    <li class="list-item">Ordered item</li>
+    <li class="list-item">Ordered item
         <ul class="list list-bulleted">
-            <li class="list-item">List item</li>
-            <li class="list-item">List item</li>
+            <li class="list-item">Bulleted item</li>
+            <li class="list-item">Bulleted item</li>
         </ul>
     </li>
-    <li class="list-item">List item</li>
+    <li class="list-item">Ordered item</li>
 </ul>
 
 <ul class="list list-bulleted">
-    <li class="list-item">List item</li>
-    <li class="list-item">List item
+    <li class="list-item">Bulleted item</li>
+    <li class="list-item">Bulleted item
         <ul class="list">
             <li class="list-item">List item</li>
             <li class="list-item">List item</li>
         </ul>
     </li>
-    <li class="list-item">List item</li>
+    <li class="list-item">Bulleted item</li>
 </ul>
 
 <ul class="list list-ordered">
-    <li class="list-item">List item</li>
-    <li class="list-item">List item
+    <li class="list-item">Ordered item</li>
+    <li class="list-item">Ordered item
         <ul class="list">
             <li class="list-item">List item</li>
             <li class="list-item">List item</li>
         </ul>
     </li>
-    <li class="list-item">List item</li>
+    <li class="list-item">Ordered item</li>
 </ul>
 
 <ul class="list">
     <li class="list-item">List item</li>
     <li class="list-item">List item
         <ul class="list list-bulleted">
-            <li class="list-item">List item</li>
-            <li class="list-item">List item</li>
+            <li class="list-item">Bulleted item</li>
+            <li class="list-item">Bulleted item</li>
         </ul>
     </li>
     <li class="list-item">List item</li>
@@ -272,8 +272,8 @@
     <li class="list-item">List item</li>
     <li class="list-item">List item
         <ul class="list list-ordered">
-            <li class="list-item">List item</li>
-            <li class="list-item">List item</li>
+            <li class="list-item">Ordered item</li>
+            <li class="list-item">Ordered item</li>
         </ul>
     </li>
     <li class="list-item">List item</li>
@@ -391,7 +391,7 @@
 </ul>
 
 <h2>Action</h2>
-<div class="list list-spaced list-ruled">
+<div class="list list-spaced list-group">
   <a href="#" class="list-item list-item-action active">Cras justo odio</a>
   <a href="#" class="list-item list-item-action">Dapibus ac facilisis in</a>
   <a href="#" class="list-item list-item-action">Morbi leo risus</a>
@@ -399,7 +399,7 @@
   <a href="#" class="list-item list-item-action disabled" tabindex="-1">Vestibulum at eros</a>
 </div>
 
-<div class="list list-spaced list-ruled">
+<div class="list list-spaced list-group">
   <button type="button" class="list-item list-item-action active">Cras justo odio</button>
   <button type="button" class="list-item list-item-action">Dapibus ac facilisis in</button>
   <button type="button" class="list-item list-item-action">Morbi leo risus</button>
