--- a/test/visual/table.html
+++ b/test/visual/table.html
@@ -912,7 +912,7 @@
 
 <h2>Card Table</h2>
 <div class="card" style="max-width: 18rem;">
-    <table class="table table-divided">
+    <table class="table table-divided card-table">
         <thead>
             <tr>
                 <th scope="col">Header</th>
