Prevent skip ink for abbreviations

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -187,7 +187,8 @@ Holder.addTheme("gray", {
 <p><abbr title="abbreviation">abbr</abbr></p>
 <p><abbr title="HyperText Markup Language" class="initialism">HTML</abbr></p>
 <p><abbr title="abbreviation" data-cfw="tooltip">abbr</abbr></p>
-
+<p><abbr title="uppercase">ABCDEFGHIJKLMNOPQRSTUVWXYZ</abbr></p>
+<p><abbr title="lowercase">abcdefghijklmnopqrstuvwxyz</abbr></p>
 <h3>Text - context</h3>
 <p>
     <span class="text-primary">Primary sample text</span><br />
