Use utils for container and tabResponsive examples

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -116,26 +116,6 @@ $(window).ready(function() {
     left: 120px;
 }
 
-/* Example CSS */
-@media (min-width: 992px) {
-    .cfw-example-tabResponsive h3 {
-        display: none;
-        visibility: hidden;
-    }
-    .cfw-example-tabResponsive .collapse {
-        display: block;
-        visibility: visible;
-    }
-}
-@media (max-width: 991px) {
-    .cfw-example-tabResponsive .nav-tabs {
-        display: none;
-    }
-    .cfw-example-tabResponsive .tab-pane {
-        display: block;
-    }
-}
-
 .well {
   min-height: 20px;
   padding: 19px;
@@ -981,36 +961,33 @@ $(window).ready(function() {
 
             <h2 id="tab-responsive">Tab-Responsive:</h2>
 
-            <div data-cfw="tabResponsive" class="cfw-example-tabResponsive">
-                <nav>
-                <ul class="nav nav-tabs">
+            <div data-cfw="tabResponsive">
+                <ul class="nav nav-tabs d-md-down-none">
                     <li class="nav-item"><a href="#tabr0" class="nav-link" data-cfw="tab">First Tab</a></li>
                     <li class="nav-item"><a href="#tabr1" class="nav-link" data-cfw="tab">Second Tab</a></li>
                     <li class="nav-item"><a href="#tabr2" class="nav-link" data-cfw="tab">Third Tab</a></li>
                 </ul>
-                </nav>
                 <div class="tab-content">
-                    <div class="tab-pane" id="tabr0">
-                        <h3><a href="#tabr0_collapse" data-cfw="collapse">First Tab <span class="caret"></span></a></h3>
-                        <div id="tabr0_collapse">
+                    <div id="tabr0" class="tab-pane d-block">
+                        <h3><a href="#tabr0_collapse" class="d-lg-none" data-cfw="collapse">First Tab <span class="caret"></span></a></h3>
+                        <div id="tabr0_collapse" class="collapse">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean non nisi ipsum. Quisque feugiat, arcu in pulvinar varius; risus odio interdum diam; a hendrerit urna sem vitae enim. Aenean fermentum iaculis nibh sodales consectetur.</p>
                         </div>
                     </div>
-                    <div class="tab-pane" id="tabr1">
-                        <h3><a href="#" data-cfw="collapse" data-cfw-collapse-target="#tabr1_collapse">Second Tab <span class="caret"></span></a></h3>
-                        <div id="tabr1_collapse">
+                    <div id="tabr1" class="tab-pane d-block">
+                        <h3><a href="#tabr1_collapse" class="d-lg-none" data-cfw="collapse">Second Tab <span class="caret"></span></a></h3>
+                        <div id="tabr1_collapse" class="collapse">
                             <p>Praesent tristique dolor quis condimentum lobortis. Phasellus accumsan lacus vitae quam elementum, non euismod urna adipiscing. Suspendisse sodales enim non sem consequat dictum. Ut sit amet elementum purus, mattis rhoncus elit.</p>
                         </div>
                     </div>
-                    <div class="tab-pane" id="tabr2">
-                        <h3><a href="#" data-cfw="collapse" data-cfw-collapse-target="#tabr2_collapse">Third Tab <span class="caret"></span></a></h3>
-                        <div id="tabr2_collapse">
+                    <div id="tabr2" class="tab-pane d-block">
+                        <h3><a href="#tabr2_collapse" class="d-lg-none" data-cfw="collapse">Third Tab <span class="caret"></span></a></h3>
+                        <div id="tabr2_collapse" class="collapse">
                             <p>Nullam malesuada massa urna, non gravida odio scelerisque sit amet. Donec sit amet rutrum quam, vel faucibus ante. Sed iaculis aliquet tortor vel tristique? In ligula nisi, suscipit vel ipsum id; elementum iaculis dui.</p>
                         </div>
                     </div>
                 </div>
             </div>
-
 
             <hr />
 
