--- a/test/visual/button-group.html
+++ b/test/visual/button-group.html
@@ -216,6 +216,24 @@
         <button type="button" class="btn btn-icon" aria-label="Icon button"><span class="fas fa-fw fa-info-circle" aria-hidden="true"></span></button>
     </div>
 
+    <h2>Button Growth</h2>
+
+    <div class="btn-group mb-1" role="group" aria-label="Extra small button group" style="width: 20rem;">
+        <div class="btn-check">
+            <input id="checkbox8" type="checkbox" class="btn-check-input" checked>
+            <label for="checkbox8" class="btn btn-info">Check 8</label>
+        </div>
+        <button type="button" class="btn">Action</button>
+    </div>
+    <br />
+    <div class="btn-group-vertical mb-1" role="group" aria-label="Vertical button group">
+        <button type="button" class="btn">Button</button>
+        <button type="button" class="btn">Button much wider</button>
+        <div class="btn-check">
+            <input id="checkbox9" type="checkbox" class="btn-check-input" checked>
+            <label for="checkbox9" class="btn btn-info">Check 9</label>
+        </div>
+    </div>
 
 </div>
 
